# querv

./: .gitignore  .travis.yml  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.rst  pyproject.toml  querv.py  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tasks.py  tox.ini  travis_pypi_setup.py
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
querv/: __init__.py  querv.py
src/querv/: __init__.py  querv.py
tests/: test_querv.py
