[tool.poetry]
name = "querv"
version = "0.3.0"
description = "Summarize aws-cli ec2-descriptions."
license = "ISC"
authors = ["Jesse Butcher <boweeb@gmail.com>"]
maintainers = []
readme = "README.rst"
homepage = "https://github.com/boweeb/querv"
repository = "https://github.com/boweeb/querv"
documentation = "https://github.com/boweeb/querv"
keywords = ["querv", "ec2", "aws"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Utilities",
]
packages = [{ include = "querv", from = "src" }]
include = [{ path = "tests", format = "sdist" }]
#include = [
#    "docs/**/*",
#    "tests/**/*",
#    "AUTHORS.rst",
#    "CONTRIBUTING.rst",
#    "HISTORY.rst"
#]

[tool.poetry.scripts]
querv = 'querv.querv:main'

[tool.poetry.dependencies]
python = "^3.12"
docopt = "^0.6"
boto3 = "^1.28"
boto3-type-annotations = "^0.3"
boto3-stubs = "^1.28"

[tool.poetry.group.dev.dependencies]
coverage = "*"
pytest = "*"
pytest-cov = "*"
pytest-bdd = "*"
mypy = "*"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120
atomic = true
lines_after_imports = 2

[tool.mypy]
# Specify the target platform details in config, so your developers are
# free to run mypy on Windows, Linux, or macOS and get consistent
# results.
python_version = "3.12"
platform = "linux"

# Magic combination for namespace-package under src/
namespace_packages = true
mypy_path = "src"
explicit_package_bases = true

# flake8-mypy expects the two following for sensible formatting
#show_column_numbers = true

# show error messages from unrelated files
follow_imports = "normal"

# suppress errors about unsatisfied imports
#ignore_missing_imports = true

# be strict
disallow_untyped_calls = true
warn_return_any = true
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_unused_ignores = true

# The following are off by default.  Flip them on if you feel adventurous.
disallow_untyped_defs = true
check_untyped_defs = true

# No incremental mode
#cache_dir = "/dev/null"

disallow_any_generics = true

plugins = [
    # "pydantic.mypy",
]

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib --strict-config --strict-markers -ra"]
xfail_strict = true

[tool.pylint.format]
max-line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
